MSS-1399 Height & overlap issue fix

--- a/movado/cartridges/app_custom_movado/cartridge/client/default/scss/components/_applePay.scss
+++ b/movado/cartridges/app_custom_movado/cartridge/client/default/scss/components/_applePay.scss
@@ -24,10 +24,11 @@
 .dw-apple-pay-button.apple-pay-pdp:hover {
     padding: rem(6) rem(12);
     flex-basis: 0;
-    flex-grow: 1;
+    flex-grow: 0;
     max-width: 100%;
     margin: auto;
     border-radius: 0;
+    
 }
 
 isapplepay.btn {
@@ -47,8 +48,16 @@ isapplepay.btn {
 }
 
 .cart-and-ipay {
+
+    .apple-pay-pdp.btn {
     display: flex;
     justify-content: center;
+
+    @include media-breakpoint-up(md) {
+        justify-content: flex-start;
+        margin-left: rem(15);
+    }
+  }
 }
 
 .applepay-tab-wrapper {
