--- a/olivia-burton-uk/cartridges/app_custom_ob_uk/cartridge/client/default/scss/text/_productDetails.scss
+++ b/olivia-burton-uk/cartridges/app_custom_ob_uk/cartridge/client/default/scss/text/_productDetails.scss
@@ -59,7 +59,7 @@
           
           @include media-breakpoint-up(custom-md) {
             width: rem(296);
-            min-width: initial;
+            min-width:rem(296) ;
             height: rem(42.44);
             margin-top: rem(15);
             padding: rem(10) rem(12) rem(10) rem(12);
@@ -82,7 +82,6 @@
     letter-spacing: rem(0.4);
     font-weight: normal;
     width: 100%;
-    height: rem(90);
 
     a {
       font-family: $font-museo-light;
